--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
     width: 454px;
     height: 618px;
     
-    background-image: url('./img/smartphones.png');
+    background-image: url('../img/smartphones.png');
     
 }
 .instagram-phone-img .instagram-phone-img-inner {
@@ -137,11 +137,11 @@ body {
 }
 
 .app-download:nth-child(1) {
-    background-image: url('./img/apple-button.png');
+    background-image: url('../img/apple-button.png');
 }
 
 .app-download:nth-child(2) {
-    background-image: url('./img/googleplay-button.png');
+    background-image: url('../img/googleplay-button.png');
 }
 
 /* media queries */
@@ -179,23 +179,23 @@ body {
 @keyframes carrocel {
     0% { 
         
-        background-image: url('./img/01.jpg');
+        background-image: url('../img/01.jpg');
     }
     25% { 
         
-        background-image: url('./img/02.jpg');
+        background-image: url('../img/02.jpg');
     }
     50% { 
 
-        background-image: url('./img/03.jpg');
+        background-image: url('../img/03.jpg');
     }
     75% { 
         
-        background-image: url('./img/04.jpg');
+        background-image: url('../img/04.jpg');
     }
     100% { 
         
-        background-image: url('./img/05.jpg');
+        background-image: url('../img/05.jpg');
 
     }
     
